Updated NLP codes

--- a/LP6/NLP/3-Preprocessing/Preprocessing.ipynb
+++ b/LP6/NLP/3-Preprocessing/Preprocessing.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "6a303211",
       "metadata": {
         "id": "6a303211"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "276b95bb",
       "metadata": {
         "id": "276b95bb"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "8e590fd5",
       "metadata": {
         "colab": {
@@ -143,7 +143,7 @@
               "4  005.txt-business   1         1575  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -154,7 +154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "63a2f9af",
       "metadata": {
         "colab": {
@@ -171,7 +171,7 @@
               "'Dollar gains on Greenspan speech\\r\\n\\r\\nThe dollar has hit its highest level against the euro in almost three months after the Federal Reserve head said the US trade deficit is set to stabilise.\\r\\n\\r\\nAnd Alan Greenspan highlighted the US government\\'s willingness to curb spending and rising household savings as factors which may help to reduce it. In late trading in New York, the dollar reached $1.2871 against the euro, from $1.2974 on Thursday. Market concerns about the deficit has hit the greenback in recent months. On Friday, Federal Reserve chairman Mr Greenspan\\'s speech in London ahead of the meeting of G7 finance ministers sent the dollar higher after it had earlier tumbled on the back of worse-than-expected US jobs data. \"I think the chairman\\'s taking a much more sanguine view on the current account deficit than he\\'s taken for some time,\" said Robert Sinche, head of currency strategy at Bank of America in New York. \"He\\'s taking a longer-term view, laying out a set of conditions under which the current account deficit can improve this year and next.\"\\r\\n\\r\\nWorries about the deficit concerns about China do, however, remain. China\\'s currency remains pegged to the dollar and the US currency\\'s sharp falls in recent months have therefore made Chinese export prices highly competitive. But calls for a shift in Beijing\\'s policy have fallen on deaf ears, despite recent comments in a major Chinese newspaper that the \"time is ripe\" for a loosening of the peg. The G7 meeting is thought unlikely to produce any meaningful movement in Chinese policy. In the meantime, the US Federal Reserve\\'s decision on 2 February to boost interest rates by a quarter of a point - the sixth such move in as many months - has opened up a differential with European rates. The half-point window, some believe, could be enough to keep US assets looking more attractive, and could help prop up the dollar. The recent falls have partly been the result of big budget deficits, as well as the US\\'s yawning current account gap, both of which need to be funded by the buying of US bonds and assets by foreign firms and governments. The White House will announce its budget on Monday, and many commentators believe the deficit will remain at close to half a trillion dollars.'"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -193,15 +193,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "c8556e43",
       "metadata": {
         "id": "c8556e43"
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "df['Content_Parsed_1'] = df['Content'].str.replace(\"\\r\", \" \")\n",
         "df['Content_Parsed_1'] = df['Content_Parsed_1'].str.replace(\"\\n\", \" \")\n",
         "df['Content_Parsed_1'] = df['Content_Parsed_1'].str.replace(\"    \", \" \")\n",
@@ -210,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "id": "93048280",
       "metadata": {
         "colab": {
@@ -221,8 +219,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "df['Content_Parsed_2'] = df['Content_Parsed_1'].str.lower()         #all to lower case\n",
         "\n",
         "punctuation_signs = list(\"?:!.,;\")                                  #remove punctuations\n",
@@ -236,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "id": "eeb76512",
       "metadata": {
         "colab": {
@@ -251,13 +247,15 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /Users/mehul/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /Users/mehul/nltk_data...\n",
             "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package omw-1.4 to /Users/mehul/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /Users/mehul/nltk_data...\n",
-            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+            "[nltk_data]       date!\n"
           ]
         }
       ],
@@ -285,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "2ace6622",
       "metadata": {
         "id": "2ace6622"
@@ -323,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "id": "18d20bce",
       "metadata": {
         "colab": {
@@ -350,7 +348,7 @@
               "Name: Content_Parsed_5, Length: 2225, dtype: object"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -378,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "id": "db4bafe5",
       "metadata": {
         "colab": {
@@ -393,7 +391,7 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /Users/mehul/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         }
       ],
@@ -404,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "id": "b7ff2ed4",
       "metadata": {
         "colab": {
@@ -425,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "id": "32b36df4",
       "metadata": {
         "colab": {
@@ -442,7 +440,7 @@
               "'japan narrowly escape recession japan economy teeter on the brink of a technical recession in the three months to september figure show revise figure indicate growth of just 01% - and a similar-sized contraction in the previous quarter on an annual basis the data suggest annual growth of just 02% suggest a much more hesitant recovery than have previously be think a common technical definition of a recession be two successive quarter of negative growth the government be keen to play down the worry implications of the data i maintain the view that japan economy remain in a minor adjustment phase in an upward climb and we will monitor developments carefully say economy minister heizo takenaka but in the face of the strengthen yen make export less competitive and indications of weaken economic condition ahead observers be less sanguine it paint a picture of a recovery much patchier than previously think say paul sheard economist at lehman brothers in tokyo improvements in the job market apparently have yet to fee through to domestic demand with private consumption up just 02% in the third quarter'"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -453,7 +451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 13,
       "id": "503086cf",
       "metadata": {
         "colab": {
@@ -545,7 +543,7 @@
               "0  ad sales boost time warner profit quarterly pr...  "
             ]
           },
-          "execution_count": 15,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -557,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 14,
       "id": "8e208b4f",
       "metadata": {
         "colab": {
@@ -664,7 +662,7 @@
               "4  pernod takeover talk lift domecq share in uk d...  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -690,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 15,
       "id": "a7a95e4e",
       "metadata": {
         "id": "a7a95e4e"
@@ -712,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 16,
       "id": "d3e8785a",
       "metadata": {
         "colab": {
@@ -825,7 +823,7 @@
               "4  pernod takeover talk lift domecq share in uk d...              0  "
             ]
           },
-          "execution_count": 18,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -847,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 17,
       "id": "e889bc57",
       "metadata": {
         "id": "e889bc57"
@@ -873,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "id": "6d1b9531",
       "metadata": {
         "id": "6d1b9531"
@@ -889,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 19,
       "id": "9ba85e96",
       "metadata": {
         "colab": {
@@ -930,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 20,
       "id": "2f3e88f8",
       "metadata": {
         "colab": {
@@ -1020,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 21,
       "id": "90ae336b",
       "metadata": {
         "colab": {
@@ -1091,7 +1089,7 @@
               " 'such as']"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
