--- a/LP6/NLP/4-Transformer-From-Scratch/main.ipynb
+++ b/LP6/NLP/4-Transformer-From-Scratch/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "7wmQAHzjatPt"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "pDIUXpdSatPy"
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "ATMnq5dmboTz"
       },
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "YsPBNIb5bpor"
       },
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "wxD3A8MGbrVj"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "4aOxrTR8bt_e"
       },
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "OK24t-3ibwKX"
       },
@@ -210,11 +210,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "f1V61bKfbyVD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[4470,  648, 1279,  ..., 4971, 4577,  157],\n",
+            "        [4075, 3013, 4891,  ..., 4715,  759, 4605],\n",
+            "        [  95, 1595, 2515,  ..., 1039, 4795, 1406],\n",
+            "        ...,\n",
+            "        [1018, 4971, 3539,  ..., 2370, 3445, 3414],\n",
+            "        [4907,  670, 3798,  ..., 4446,  719, 2024],\n",
+            "        [ 217, 2283,  643,  ..., 4842, 4015, 4790]])\n"
+          ]
+        }
+      ],
       "source": [
         "src_vocab_size = 5000\n",
         "tgt_vocab_size = 5000\n",
@@ -229,12 +243,13 @@
         "\n",
         "# Generate random sample data\n",
         "src_data = torch.randint(1, src_vocab_size, (64, max_seq_length))  # (batch_size, seq_length)\n",
+        "print(src_data)\n",
         "tgt_data = torch.randint(1, tgt_vocab_size, (64, max_seq_length))  # (batch_size, seq_length)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -247,26 +262,26 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch: 1, Loss: 8.678483963012695\n",
-            "Epoch: 2, Loss: 8.551767349243164\n",
-            "Epoch: 3, Loss: 8.480701446533203\n",
-            "Epoch: 4, Loss: 8.42580795288086\n",
-            "Epoch: 5, Loss: 8.373557090759277\n",
-            "Epoch: 6, Loss: 8.29789924621582\n",
-            "Epoch: 7, Loss: 8.211651802062988\n",
-            "Epoch: 8, Loss: 8.141698837280273\n",
-            "Epoch: 9, Loss: 8.050458908081055\n",
-            "Epoch: 10, Loss: 7.972054481506348\n",
-            "Epoch: 11, Loss: 7.889932632446289\n",
-            "Epoch: 12, Loss: 7.807201862335205\n",
-            "Epoch: 13, Loss: 7.72592830657959\n",
-            "Epoch: 14, Loss: 7.638829708099365\n",
-            "Epoch: 15, Loss: 7.556386470794678\n",
-            "Epoch: 16, Loss: 7.468988418579102\n",
-            "Epoch: 17, Loss: 7.39320707321167\n",
-            "Epoch: 18, Loss: 7.305476188659668\n",
-            "Epoch: 19, Loss: 7.230265140533447\n",
-            "Epoch: 20, Loss: 7.142375469207764\n"
+            "Epoch: 1, Loss: 8.69321060180664\n",
+            "Epoch: 2, Loss: 8.557430267333984\n",
+            "Epoch: 3, Loss: 8.48678207397461\n",
+            "Epoch: 4, Loss: 8.430947303771973\n",
+            "Epoch: 5, Loss: 8.37063217163086\n",
+            "Epoch: 6, Loss: 8.301801681518555\n",
+            "Epoch: 7, Loss: 8.2218017578125\n",
+            "Epoch: 8, Loss: 8.136162757873535\n",
+            "Epoch: 9, Loss: 8.052074432373047\n",
+            "Epoch: 10, Loss: 7.978311538696289\n",
+            "Epoch: 11, Loss: 7.89163064956665\n",
+            "Epoch: 12, Loss: 7.811300277709961\n",
+            "Epoch: 13, Loss: 7.728659152984619\n",
+            "Epoch: 14, Loss: 7.6460466384887695\n",
+            "Epoch: 15, Loss: 7.558225154876709\n",
+            "Epoch: 16, Loss: 7.4778337478637695\n",
+            "Epoch: 17, Loss: 7.396419525146484\n",
+            "Epoch: 18, Loss: 7.314493656158447\n",
+            "Epoch: 19, Loss: 7.229273796081543\n",
+            "Epoch: 20, Loss: 7.146093368530273\n"
           ]
         }
       ],
