--- a/LP6/NLP/MiniProject/main.ipynb
+++ b/LP6/NLP/MiniProject/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -21,15 +21,15 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import nltk\n",
-    "from nltk. corpus import indian\n",
-    "from nltk. tag import tnt\n",
+    "from nltk.corpus import indian\n",
+    "from nltk.tag import tnt\n",
     "import string\n",
     "nltk. download(\"punkt\")\n",
     "nltk.download(\"indian\")\n"
@@ -37,14 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train():\n",
     "    taggedSet=\"hindi.pos\"\n",
     "    wordSet = indian.sents(taggedSet)\n",
-    "#   print(\"wordSet: \",wordset)\n",
+    "    print(\"wordSet: \",wordSet)\n",
+    "    print(\"taggedSet: \",taggedSet)\n",
     "    count = 0\n",
     "#   print(wordset[0])\n",
     "    for sen in wordSet:\n",
@@ -55,8 +56,8 @@
     "                 for i in sen\n",
     "             ]\n",
     "         ).strip()\n",
-    "#   print(count, sen, \"sentences\")\n",
-    "#   print(\"Total sentences in the tagged file are\", count)\n",
+    "    # print(count, sen, \"sentences\")\n",
+    "    # print(\"Total sentences in the tagged file are\", count)\n",
     "    trainPerc = 0.9\n",
     "\n",
     "    trainRows = int (trainPerc*count)\n",
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/11/pzs50dmx7w3_b1r1l7rqtgjr0000gn/T/ipykernel_38581/3744696970.py:31: DeprecationWarning: \n",
+      "/var/folders/11/pzs50dmx7w3_b1r1l7rqtgjr0000gn/T/ipykernel_18438/1426692524.py:32: DeprecationWarning: \n",
       "  Function evaluate() has been deprecated.  Use accuracy(gold)\n",
       "  instead.\n",
       "  print(\"Accuracy: \", pos_tagger.evaluate(test_data))\n"
@@ -106,6 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "wordSet:  [['पूर्ण', 'प्रतिबंध', 'हटाओ', ':', 'इराक'], ['संयुक्त', 'राष्ट्र', '।'], ...]\n",
+      "taggedSet:  hindi.pos\n",
       "Training dataset length:  486\n",
       "Testing dataset length:  53\n",
       "Accuracy:  0.8111964873765093\n",
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
