Updated Codes and Added DL-Assignment 2

--- a/LP5/HPC/assignment5.ipynb
+++ b/LP5/HPC/assignment5.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
@@ -52,6 +35,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ebqsk_UBG-be",
+        "outputId": "5b106fc5-cda4-4c9d-ac84-8db18015bc2c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "final result: 1.000000\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%cu\n",
         "#include <stdio.h>\n",
@@ -80,10 +81,10 @@
         "    //Host output vector\n",
         "    double *h_c;\n",
         " \n",
-        "    // Device input vectors\n",
+        "    // Device input vectors (GPU)\n",
         "    double *d_a;\n",
         "    double *d_b;\n",
-        "    //Device output vector\n",
+        "    //Device output vector (GPU)\n",
         "    double *d_c;\n",
         " \n",
         "    // Size, in bytes, of each vector\n",
@@ -102,8 +103,8 @@
         "    int i;\n",
         "    // Initialize vectors on host\n",
         "    for( i = 0; i < n; i++ ) {\n",
-        "        h_a[i] = sin(i)*sin(i);\n",
-        "        h_b[i] = cos(i)*cos(i);\n",
+        "        h_a[i] = sin(i);\n",
+        "        h_b[i] = cos(i);\n",
         "    }\n",
         " \n",
         "    // Copy host vectors to device\n",
@@ -142,34 +143,33 @@
         " \n",
         "    return 0;\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ebqsk_UBG-be",
-        "outputId": "5b106fc5-cda4-4c9d-ac84-8db18015bc2c"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "final result: 1.000000\n",
-            "\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "6eOwFLYHJAJe"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
