--- a/LP5/DL/assignment2/main.ipynb
+++ b/LP5/DL/assignment2/main.ipynb
@@ -95,6 +95,14 @@
         "model.add(Dense(256, activation='relu'))\n",
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(1, activation='sigmoid'))\n",
+        "# The purpose of using an Embedding layer in natural language processing tasks is \n",
+        "# to capture the semantic relationships between words and represent them in a meaningful and compact vector space, \n",
+        "# allowing the subsequent layers of the model to learn from this representation and make accurate predictions.\n",
+        "\n",
+        "\n",
+        "# GlobalMaxPooling1D layer acts as a dimensionality reduction step \n",
+        "# and provides a global view of the input sequence, enabling the model \n",
+        "# to capture the most significant features and achieve efficient and effective text classification.\n",
         "\n",
         "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "\n",
